styles/pixel-berlin.css
.w-checkbox {
  display: block;
  margin-bottom: 5px;
  padding-left: 20px;
}

.w-checkbox::before {
  content: ' ';
  display: table;
  -ms-grid-column-span: 1;
  grid-column-end: 2;
  -ms-grid-column: 1;
  grid-column-start: 1;
  -ms-grid-row-span: 1;
  grid-row-end: 2;
  -ms-grid-row: 1;
  grid-row-start: 1;
}

.w-checkbox::after {
  content: ' ';
  display: table;
  -ms-grid-column-span: 1;
  grid-column-end: 2;
  -ms-grid-column: 1;
  grid-column-start: 1;
  -ms-grid-row-span: 1;
  grid-row-end: 2;
  -ms-grid-row: 1;
  grid-row-start: 1;
  clear: both;
}

.w-checkbox-input {
  float: left;
  margin-bottom: 0px;
  margin-left: -20px;
  margin-right: 0px;
  margin-top: 4px;
  line-height: normal;
}

.w-checkbox-input--inputType-custom {
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  border-right-width: 1px;
  border-top-color: #ccc;
  border-bottom-color: #ccc;
  border-left-color: #ccc;
  border-right-color: #ccc;
  border-top-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-right-style: solid;
  width: 12px;
  height: 12px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.w-checkbox-input--inputType-custom.w--redirected-checked {
  background-color: #3898ec;
  border-top-color: #3898ec;
  border-bottom-color: #3898ec;
  border-left-color: #3898ec;
  border-right-color: #3898ec;
  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/custom-checkbox-checkmark.589d534424.svg');
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
}

.w-checkbox-input--inputType-custom.w--redirected-focus {
  box-shadow: 0px 0px 3px 1px #3898ec;
}

h1 {
  font-family: 'Montserrat local', sans-serif;
  color: #000;
  font-size: 48px;
  line-height: 1.29em;
  font-weight: 700;
  letter-spacing: -0.02em;
}

h2 {
  margin-top: 30px;
  font-family: 'Montserrat local', sans-serif;
  color: #000;
  font-size: 38px;
  line-height: 1.34em;
  letter-spacing: -0.02em;
}

h3 {
  margin-top: 30px;
  font-family: 'Montserrat local', sans-serif;
  color: #000;
  font-size: 24px;
  font-weight: 700;
  letter-spacing: -0.02em;
}

h4 {
  font-family: 'Montserrat local', sans-serif;
  color: #000;
  font-size: 20px;
  line-height: 1.3em;
  letter-spacing: -0.02em;
}

p {
  font-family: Charter, 'Times New Roman', sans-serif;
  color: #0a0a0a;
  font-size: 20px;
  line-height: 1.6em;
  font-weight: 400;
  letter-spacing: -0.025em;
}

a {
  font-family: Charter, 'Times New Roman', sans-serif;
  color: #2d7ff9;
  font-size: 20px;
  line-height: 1.6em;
  letter-spacing: -0.025em;
  text-decoration: none;
}

a:hover {
  color: #054ebb;
}

li {
  position: relative;
  padding-left: 40px;
  font-family: Charter, 'Times New Roman', sans-serif;
  font-size: 20px;
  line-height: 1.8em;
  letter-spacing: -0.025em;
}

img {
  display: inline-block;
  -o-object-fit: cover;
  object-fit: cover;
}

label {
  display: block;
  margin-bottom: 5px;
  font-weight: bold;
}

blockquote {
  font-family: 'Montserrat local', sans-serif;
  font-size: 20px;
  line-height: 1.8em;
  letter-spacing: -0.01em;
}

figure {
  margin-top: 22px;
  margin-bottom: 10px;
}

figcaption {
  margin-top: 8px;
  margin-bottom: 32px;
  text-align: center;
}

.project-hero-copy {
  width: 50%;
  padding-top: 60px;
  padding-bottom: 60px;
}

.hero-headline {
  font-size: 60px;
  line-height: 1.1em;
  font-weight: 400;
}

.project-content {
  display: block;
}

.project-content figure {
  margin-top: 10px;
  margin-bottom: 50px;
}

.project-content img {
  display: block;
}

.project-hero-section {
  padding-top: 60px;
}

.project-hero-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 90%;
  max-width: 1000px;
  margin-right: auto;
  margin-left: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.project-details-container {
  display: block;
  width: 90%;
  max-width: 1000px;
  margin-right: auto;
  margin-left: auto;
}

.project-services {
  padding-left: 0px;
}

.project-services ul {
  padding-left: 20px;
  font-size: 14px;
  line-height: 30px;
  font-weight: 500;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.project-hero-logo {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  padding: 60px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.navbar {
  display: block;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
}

.container-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 80%;
  height: 100%;
  max-width: 1000px;
  margin-right: 0px;
  margin-left: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.back-button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  float: left;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
/* ... */

